<package format="2">
    <name>ur3e_controller</name>
    <version>0.0.0</version>
    <description>UR3e Controller Package</description>

    <maintainer email="your_email@domain.com">Your Name</maintainer>

    <license>BSD</license>

    <depend>rclpy</depend>
    <depend>std_msgs</depend>

    <buildtool_depend>ament_python</buildtool_depend>
    <exec_depend>rclpy</exec_depend>
</package>

